@@ -21,6 +21,7 @@ import org.meandre.core.repository.ExecutableComponentDescription;
 import org.meandre.core.repository.ExecutableComponentInstanceDescription;
 import org.meandre.core.repository.FlowDescription;
 import org.meandre.core.repository.QueryableRepository;
+import org.meandre.core.utils.ModelIO;
 import org.meandre.zigzag.parser.ParseException;
 
 import com.hp.hpl.jena.rdf.model.Model;
@@ -73,17 +74,9 @@ public abstract class Tools {
 	public static Model pullRepository(URL url, int iLine) throws ParseException {
 		Model mod = ModelFactory.createDefaultModel();
 		try {
-			mod.read(url.openStream(),null,"TTL");
+			ModelIO.readModelInDialect(mod, url);
 		} catch (Exception e) {
-			try {
-				mod.read(url.openStream(),null,"N-TRIPLE");
-			} catch (Exception e1) {
-				try {
-					mod.read(url.openStream(),null);
-				} catch (Exception e2) {
-					throw new ParseException("Could not retrieve repository from "+url+" (line: "+iLine+")");
-				}
-			}
+			throw new ParseException("Could not retrieve repository from "+url+" (line: "+iLine+")");
 		}
 		return mod;
 	}
